added last check date

--- a/top_template.html
+++ b/top_template.html
@@ -44,6 +44,7 @@
                 {% endfor %}
             </table>
             {% else %}
+            <b>Last check: {{ date }}</b><br/>
             No new entries
             {% endif %}
         </p>
