--- a/top_template.html
+++ b/top_template.html
@@ -3,25 +3,28 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>IMDB's newly added top 250 movies</title>
-        <meta name="description" content="IMDB's newly added top 250 movies">
+        <title>IMDb's newly added top 250 movies</title>
+        <meta name="description" content="IMDb's newly added top 250 movies">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <style type="text/css">
         .tg  {border-collapse:collapse;border-spacing:0;border-color:#ccc;border:none;margin:0px auto;width:800px;}
         .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-color:#ccc;color:#333;background-color:#fff;text-align: left;}
         .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-color:#ccc;color:#333;background-color:#f0f0f0;text-align: left;}
         .tg .tg-4eph{background-color:#f9f9f9}
+        #footer {bottom:20px;font-size:14px;position: fixed;text-align:center;width:100%;}
+        #main {margin:0 auto;width:800px;}
         </style>
     </head>
     <body>
         <a href="https://github.com/doidor/imdbnewly"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
 
-        <p>
+        <div id="main">
+            <h2>IMDb's newly added top 250 movies</h2>
+            Top 250 list date: {{ oldListDate }}<br/>
+            Last check date: {{ newListDate }}<br/><br/>
+
             {% if movies|length > 0 %}
             <table class="tg">
-                <tr>
-                    <td colspan="4"><b>Last check: {{ date }}</b></td>
-                </tr>
                 <tr>
                     <th>Title</th>
                     <th>Rating</th>
@@ -44,9 +47,11 @@
                 {% endfor %}
             </table>
             {% else %}
-            <b>Last check: {{ date }}</b><br/>
             No new entries
             {% endif %}
-        </p>
+        </div>
+        <div id="footer">
+            Created by <a href="http://doidor.com/">Tudor Popa</a> | Visit IMDb's <a href="http://www.imdb.com/chart/top?ref_=nv_ch_250_4">Top 250 list</a> | <a href="index.txt">ascii</a>
+        </div>
     </body>
 </html>
