updated the css

--- a/top_template.html
+++ b/top_template.html
@@ -7,12 +7,12 @@
         <meta name="description" content="IMDb's newly added top 250 movies">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <style type="text/css">
-        .tg  {border-collapse:collapse;border-spacing:0;border-color:#ccc;border:none;margin:0px auto;width:800px;}
+        .tg  {border-collapse:collapse;border-spacing:0;border-color:#ccc;border:none;width:100%;}
         .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-color:#ccc;color:#333;background-color:#fff;text-align: left;}
         .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-color:#ccc;color:#333;background-color:#f0f0f0;text-align: left;}
         .tg .tg-4eph{background-color:#f9f9f9}
-        #footer {bottom:20px;font-size:14px;position: fixed;text-align:center;width:100%;}
-        #main {margin:0 auto;width:800px;}
+        #footer{bottom: 10px;font-size: 14px;left: 0;max-width: 100%;position: absolute;text-align: center;width: 100%;}
+        #main {margin:0 auto;max-width:800px;}
         </style>
     </head>
     <body>
