updated the top template css

--- a/top_template.html
+++ b/top_template.html
@@ -11,7 +11,7 @@
         .tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-color:#ccc;color:#333;background-color:#fff;text-align: left;}
         .tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:0px;overflow:hidden;word-break:normal;border-color:#ccc;color:#333;background-color:#f0f0f0;text-align: left;}
         .tg .tg-4eph{background-color:#f9f9f9}
-        #footer{bottom: 10px;font-size: 14px;left: 0;max-width: 100%;position: absolute;text-align: center;width: 100%;}
+        #footer{bottom: 10px;font-size: 14px;left: 0;max-width: 100%;text-align: center;width: 100%;margin-top: 30px;}
         #main {margin:0 auto;max-width:800px;}
         #forkongithub a{background:#000;color:#fff;text-decoration:none;font-family:arial,sans-serif;text-align:center;font-weight:bold;padding:5px 40px;font-size:1rem;line-height:2rem;position:relative;transition:0.5s;}
         #forkongithub a:hover{background:#c11;color:#fff;}
